--- a/index.html
+++ b/index.html
@@ -657,6 +657,7 @@
         class="btn-close"
         onclick="closeAlert()"
         aria-label="Close"
+        style="color: black"
       ></button>
     </div>
     <div class="sidebar" id="sidebar">
