--- a/index.html
+++ b/index.html
@@ -1305,7 +1305,7 @@
           </select>
           <button class="btn btn-success btn-sm fw-bold" onclick="showCompletionReasonModal(${
             task.id
-          })">בוצע</button>
+          })">סיום</button>
         </div>
       </div>
     `;
