--- a/index.html
+++ b/index.html
@@ -642,6 +642,11 @@
         opacity: 1;
         transition: none; /* Remove any transition effects */
       }
+
+      /*Dropdown רמת סיווג/רמת חשיבות*/
+      .dropdown .classification {
+        width: 70px;
+      }
     </style>
   </head>
   <body>
@@ -1293,16 +1298,21 @@
               </ul>
             </div>
           </div>
-          <select class="form-select form-select-sm w-25 me-2" onchange="changeTaskType(${
-            task.id
-          }, this.value)">
-            <option value="פניה" ${
-              task.type === "פניה" ? "selected" : ""
-            }>פניה</option>
-            <option value="משימה" ${
-              task.type === "משימה" ? "selected" : ""
-            }>משימה</option>
-          </select>
+         <div class="dropdown">
+  <button class="btn btn-light btn-sm dropdown-toggle me-2 classification" type="button" id="taskTypeDropdown${
+    task.id
+  }" data-bs-toggle="dropdown" aria-expanded="false">
+    סיווג
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="taskTypeDropdown${task.id}">
+    <li><a class="dropdown-item text-center" href="#" onclick="changeTaskType(${
+      task.id
+    }, 'פניה')">פניה</a></li>
+    <li><a class="dropdown-item text-center" href="#" onclick="changeTaskType(${
+      task.id
+    }, 'משימה')">משימה</a></li>
+  </ul>
+</div>
           <button class="btn btn-success btn-sm fw-bold" onclick="showCompletionReasonModal(${
             task.id
           })">סיום</button>
