--- a/analytics.html
+++ b/analytics.html
@@ -625,19 +625,19 @@
       };
 
       const statusChartData = {
-        labels: ["הסתיימו בהצלחה", "נמחקו", "פתוחות ולא טופלו"],
+        labels: ["נמחקו", "הסתיימו", "פתוחות ולא טופלו"],
         datasets: [
           {
             label: "סטטוס פניות ומשימות",
             data: [statusData.completed, statusData.deleted, statusData.open],
             backgroundColor: [
-              "rgba(75, 192, 192, 0.2)",
               "rgba(255, 99, 132, 0.2)",
+              "rgba(75, 192, 192, 0.2)",
               "rgba(255, 206, 86, 0.2)",
             ],
             borderColor: [
-              "rgba(75, 192, 192, 1)",
               "rgba(255, 99, 132, 1)",
+              "rgba(75, 192, 192, 1)",
               "rgba(255, 206, 86, 1)",
             ],
             borderWidth: 1,
